PROJECT(libofd)

AUX_SOURCE_DIRECTORY(. LIBOFD_SRCS)
AUX_SOURCE_DIRECTORY(./ofd LIBOFD_SRCS)

ADD_LIBRARY(ofd SHARED ${LIBOFD_SRCS})
SET_TARGET_PROPERTIES(ofd PROPERTIES VERSION 0.8 SOVERSION 0)
SET_TARGET_PROPERTIES(ofd PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(ofd_static STATIC ${LIBOFD_SRCS})
SET_TARGET_PROPERTIES(ofd_static PROPERTIES OUTPUT_NAME "ofd")
SET_TARGET_PROPERTIES(ofd_static PROPERTIES CLEAN_DIRECT_OUTPUT 0)

# -------- LibSodium --------
FIND_PACKAGE(LibSodium REQUIRED)
INCLUDE_DIRECTORIES(${LIBSODIUM_INCLUDE_DIRS})

### -------- Poppler --------
#FIND_PACKAGE(Poppler REQUIRED)
#INCLUDE_DIRECTORIES(${POPPLER_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(ofd ${LIBOFD_DEPENDCIES} ${LIBSODIUM_LIBRARIES}  ${POPPLER_LIBRARIES} utils)
TARGET_LINK_LIBRARIES(ofd_static ${LIBOFD_DEPENDCES} ${LIBSODIUM_LIBRARIES} ${POPPLER_LIBRARIES} utils_static)

INSTALL(TARGETS ofd
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
)

INSTALL(FILES *.h DESTINATION include/ofd)

ADD_SUBDIRECTORY(ofd/reader)
