PROJECT(imofd)

AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(./gl3w/GL SRC_LIST)
AUX_SOURCE_DIRECTORY(../ImGUI/imgui SRC_LIST)
AUX_SOURCE_DIRECTORY(./sdl SRC_LIST)
AUX_SOURCE_DIRECTORY(./imgui SRC_LIST)
ADD_EXECUTABLE(imofd ${SRC_LIST})

AUX_SOURCE_DIRECTORY(imgui_demo IMGUI_DEMO_SRC_LIST)
AUX_SOURCE_DIRECTORY(gl3w/GL IMGUI_DEMO_SRC_LIST)
AUX_SOURCE_DIRECTORY(../ImGUI/imgui IMGUI_DEMO_SRC_LIST)
ADD_EXECUTABLE(imgui_demo ${IMGUI_DEMO_SRC_LIST})

INCLUDE_DIRECTORIES(../ImGUI/imgui gl3w)

INCLUDE(FindPkgConfig)

# -------- Cairo --------
FIND_PACKAGE(Cairo REQUIRED)
INCLUDE_DIRECTORIES(${CAIRO_INCLUDE_DIRS})

# -------- libSDL2 --------
FIND_PACKAGE(SDL2 REQUIRED)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
#LINK_LIBRARIES(${SDL2_LIBRARY_DIRS})

# -------- GLFW --------
FIND_PACKAGE(glfw3 REQUIRED)
INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
#LINK_LIBRARIES(${GLFW_LIBRARY_DIRS})

# -------- OpenGL --------
FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS})

# -------- GLEW --------
FIND_PACKAGE(GLEW REQUIRED)
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS})
#LINK_LIBRARIES(${GLEW_LIBRARY_DIRS})

 
TARGET_LINK_LIBRARIES(imgui_demo ofd utils ${CAIRO_LIBRARIES} ${SDL2_LIBRARIES} SDL2_image ${POPPLER_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${LIBDARWIN} dl)

TARGET_LINK_LIBRARIES(imofd ofd utils ${CAIRO_LIBRARIES} ${SDL2_LIBRARIES} SDL2_image ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${LIBDARWIN} dl)

