PROJECT(libofd)

AUX_SOURCE_DIRECTORY(. LIBOFDREADER_SRCS)

ADD_LIBRARY(ofdreader SHARED ${LIBOFDREADER_SRCS})
SET_TARGET_PROPERTIES(ofdreader PROPERTIES VERSION 0.8 SOVERSION 0)
SET_TARGET_PROPERTIES(ofdreader PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(ofdreader_static STATIC ${LIBOFDREADER_SRCS})
SET_TARGET_PROPERTIES(ofdreader_static PROPERTIES OUTPUT_NAME "ofdreader")
SET_TARGET_PROPERTIES(ofdreader_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}" )

SET(FONTFORGE_LIBRARIES fontforge python2.7)
TARGET_LINK_LIBRARIES(ofdreader ${FONTFORGE_LIBRARIES} ${GLIB_LIBRARIES} ${LIBXML2_LIBRARIES} ${LIBUUID_LIBRARIES} ${GFLAGS_LIBRARY} ${LIBPNG} ${LOG4CPP_LIBRARIES} jpeg zip)

TARGET_LINK_LIBRARIES(ofdreader_static ${FONTFORGE_LIBRARIES} ${GLIB_LIBRARIES} ${LIBXML2_LIBRARIES} ${LIBUUID_LIBRARIES} ${GFLAGS_LIBRARY}  ${LIBPNG} ${LOG4CPP_LIBRARIES} jpeg zip)

INSTALL(TARGETS ofdreader
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
)
INSTALL(FILES *.h DESTINATION include/ofd/reader)
